--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compileOnly "org.projectlombok:lombok:1.16.16"
+    compile group: 'com.google.guava', name: 'guava', version: '23.0'
+	compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
+	compile group: 'com.google.http-client', name: 'google-http-client', version: '1.23.0'
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
+
 }
