--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,7 @@ dependencies {
 	compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
 	compile group: 'com.google.http-client', name: 'google-http-client', version: '1.23.0'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
+	testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
+
 
 }
