--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,5 @@ dependencies {
 	compile group: 'com.google.http-client', name: 'google-http-client', version: '1.23.0'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
 	testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
-
-
+    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12'
 }
