--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,8 @@ configurations {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
-	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile("org.springframework.boot:spring-boot-devtools")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compileOnly "org.projectlombok:lombok:1.16.16"
     compile group: 'com.google.guava', name: 'guava', version: '23.0'
