--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,5 @@ dependencies {
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
 	testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12'
+	compile 'cglib:cglib:3.2.5'
 }
