--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ dependencies {
 	compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
 	compile group: 'com.google.http-client', name: 'google-http-client', version: '1.23.0'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
-	testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
-    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12'
+	testCompile group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.5'
+	testImplementation 'junit:junit:4.12'
+    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.5.8'
 	compile 'cglib:cglib:3.2.5'
 }
