--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	compile group: 'com.google.http-client', name: 'google-http-client', version: '1.23.0'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
 	testCompile group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.5'
+	testCompile group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
 	testImplementation 'junit:junit:4.12'
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.5.8'
 	compile 'cglib:cglib:3.2.5'
